# llm-mimic

./: .gitignore  main.py  pyproject.toml  sagemaker_execution_role.json
configs/: settings.py
configs/data_configs/: digital_data.yaml  dpo_training.yaml  feature_eng.yaml  generate_instruct_datasets.yaml  generate_preference_datasets.yaml  sft_training.yaml
configs/model_config/: config.json
data_models/: __init__.py  chunks.py  cleaned_documents.py  dataset.py  documents.py  embedded_chunks.py  nosql.py  prompt.py  queries.py  vector.py
pipelines/: __init__.py  data_etl.py  feature_engineering.py  generate_datasets.py  training.py
run_scipts/: run_feature_eng.py
run_scripts/: run_dpo_training.py  run_etl.py  run_evaluate.py  run_instruct_dataset.py  run_preference_dataset.py  run_sft_training.py
services/crawlers/: base.py  custom_article.py  github.py  linkedin.py  medium.py
services/db/: mongo_db_connection.py  qdrant.py
services/evaluation/: __init__.py  evaluate.py  requirements.txt  sagemaker.py
services/finetuning/: __init__.py  finetune.py  local_train.py  requirements.txt  sagemaker.py
services/generate_datasets_service/: __init__.py  constants.py  gen_datasets_utils.py  generation.py
services/inference/: inference.py  inference_pipeline_api.py  opik_utils.py  run.py  test.py
services/preprocessing/: chunking.py  chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py  embeddings.py
services/rag/: base.py  embeddings.py  query_expanison.py  (+3 more)
utils/: __init__.py  misc.py  text_format.py
(+22 files in other folders)
