[project]
name = "llm-mimic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "zenml[server]==0.74.0",
  "pymongo>=4.6.2",
  "click>=8.0.1",
  "loguru>=0.7.2",
  "rich>=13.7.10",
  "numpy>=1.26.4",
  "datasets>=3.0.1",
  "torch==2.2.2",
  "selenium>=4.21.0",
  "webdriver-manager>=4.0.1",
  "beautifulsoup4>=4.12.3",
  "html2text>=2024.2.26",
  "jmespath>=1.0.1",
  "chromedriver-autoinstaller>=0.6.4",
  "qdrant-client>=1.8.0",
  "langchain>=0.2.11",
  "sentence-transformers>=3.0.0",
  "langchain-openai>=0.1.3",
  "jinja2>=3.1.4",
  "tiktoken>=0.7.0",
  "fake-useragent>=1.5.1",
  "langchain-community>=0.2.11",
  "fastapi>=0.100",
  "uvicorn>=0.30.6",
  "opik>=0.2.2"
]
